style.css
/* CSS for cycleTracker App */

body {
  margin: 1vh 1vw;
  background-color: #222;
  color: #fff;
  font-family: "Helvetica";
}
button {
  border: 0px solid #000;
  background: none;
  color: #888;
  font-weight: bold;
  font-size: 20px;
}
input {
  border: 1px solid #bbb;
  border-radius: 6px;
  background-color: #333;
  color: #fff;
  margin-bottom: 4px;
  font-size: 20px;
}
svg {
  width: 100%;
  height: 100%;
  margin: auto;
}
select {
  background: #222;
  color: #fff;
  border-radius: 3px;
  border: 2px solid #666;
  font-size: 20px;
}

.setDiv {
  width: 100%;
  border-bottom: 1px solid #666;
}
.setDiv button {
  width: 2em;
  height: 2em;
  padding: 0;
}
.setName {
  width: 100%;
  margin-top: 6px;
  box-sizing: border-box;
}
.timeLeft {
  display: none;
  width: 50px;
  float: right;
}
.allocatedTime {
  width: 50px;
  float: right;
  margin-left: 3px;
}
.forwardSlash {
  display: none;
  float: right;
  margin-right: 3px;
  margin-left: 3px;
}
.setSelect {
  display: none;
}
.justOkButton {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 20px;
  display: block;
}
.dialog {
  display: none;
  position: fixed;
  background: #222;
  border: 2px solid #555;
  box-shadow: 3px 3px 3px #000;
  padding: 10px;
  width: 80%;
  height: 80%;
  margin-top: 30%;
  margin-left: 50%;
  transform: translate(-50%, -50%);
}
.toast {
  border-radius: 7px;
  padding: 10px;
  position: absolute;
  bottom: 30px;
  width: 60%;
  left: -100%;
  transform: translate(-50%, 0);
  transition: 0.5s;
  box-shadow: 3px 3px 3px #000;
}
.successToast {
  background: #080;
}
.informationToast {
  background: #bb0;
  color: #000;
}
.failureToast {
  background: #B00;
}
.currentSetPlaying {
  background: #57a;
}
.currentSetPaused {
  background: #663;
}
.workoutPlayer {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  text-shadow: 2px 2px 2px #000;
  background: #222;
  display: none;
  background: #222;
  transition: 0.15s;
}
.workoutPlayerPaused {
  background-color: #331;
}
.workoutPlayerSetChanged {
  background-color: #080;
}
.workoutPlayerTick {
  background-color: #B00;
}


#workoutTitle {
  width: 100%;
  box-sizing: border-box;
  display :none;
}
#workoutTitleWrapper {
  margin-top: auto;
  margin-bottom: auto;
  display: block;
}
#workoutTitleLabel, #workoutTitleUneditable {
  display: inline;
}
#workoutStorageControls {
  float: right;
}
#workoutManagementBar button,
#controlBar button {
  width: 2em;
  height: 2em;
  padding: 0;
}
#workoutManagementBar div {
  margin: 3px;
}
#workoutEditor {
  width: 100%;
}
#controlBar {
  display: inline;
  width: 100%;
}
#unmute {
  display: none;
}
#workoutList {
  width: 100%;
  overflow-y: scroll;
}
#setList {
  border-top: 1px solid #666;
  border-bottom: 1px solid #666;
}
#addSet {
  width: 100%;
  height: 1.5em;
  font-size: 24px;
  border-width: 0;
}
/* This applies just to the svg for the add set button */
#addSet svg {
  width: 1.5em;
  height: 1.5em;
}
#workoutLoadPage {
  display: none;
  width: 100%;
}
#workoutPlayer button {
  width: 2em;
  height: 2em;
  padding: 0;
}
#workoutPlayerText {
  position: absolute;
  top: 50%;
  width: 100%;
  transform: translate(0%, -50%);
}
#backToEditor {
  position: absolute;
  top: 20px;
  left: 20px;
}
#currentSetName {
  font-size: 45px;
}
#currentSetTimeLeft {
  font-size: 60px;
}
#nextSetName {
  font-size: 20px;
  margin-bottom: 30px;
}
#upNextLabel {
  font-style: italic;
  margin-top: 20px;
}

